Added Email triggering  test cases